<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="41dp"
        android:text="@string/shortcut"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="20dp"
        android:text="@string/donor_list" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="20dp"
        android:text="@string/requester_list" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_widget" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp"
        android:gravity="center|center_horizontal"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="18sp" />
</RelativeLayout>