<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable name="user" type="com.greensquare.give_a_life.models.User"/>

    </data>


    <ScrollView
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">


<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text="@{user.name}"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="@+id/blood_type"
            app:layout_constraintTop_toTopOf="parent" />


        <Spinner
            android:id="@+id/blood_type_spinner"
            android:layout_width="@dimen/spinner"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:entries="@array/blood_type"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/blood_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="32dp"
            android:text="@{user.bloodType}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:text="@{user.mobile}"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="@+id/blood_type"
            app:layout_constraintTop_toBottomOf="@+id/blood_type" />

        <EditText
            android:id="@+id/email_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@{user.email}"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="@+id/mobile"
            app:layout_constraintTop_toBottomOf="@+id/mobile" />

        <EditText
            android:id="@+id/password_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="@+id/email_profile"
            app:layout_constraintTop_toBottomOf="@+id/email_profile" />

        <EditText
            android:id="@+id/password_profile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            app:layout_constraintStart_toStartOf="@+id/password_profile"
            app:layout_constraintTop_toBottomOf="@+id/password_profile" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:visibility="invisible"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel"
            app:layout_constraintStart_toStartOf="@+id/password_profile2" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="27dp"
            android:text="@string/cancel"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/confirm"
            app:layout_constraintTop_toBottomOf="@+id/password_profile2" />

        <ProgressBar
            android:id="@+id/progressBar_profle"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/my_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/my_request"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>
</layout>