<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    tools:layout_editor_absoluteY="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="108dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="@+id/blood_type"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/blood_type"
                    android:layout_width="@dimen/spinner"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:entries="@array/blood_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="@+id/blood_type"
                    app:layout_constraintTop_toBottomOf="@+id/blood_type" />

                <EditText
                    android:id="@+id/email_SignUP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="@+id/mobile"
                    app:layout_constraintTop_toBottomOf="@+id/mobile" />

                <EditText
                    android:id="@+id/password_SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="@+id/email_SignUP"
                    app:layout_constraintTop_toBottomOf="@+id/email_SignUP" />

                <EditText
                    android:id="@+id/password_SignUp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="@+id/password_SignUp"
                    app:layout_constraintTop_toBottomOf="@+id/password_SignUp" />

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/confirm"
                    app:layout_constraintBaseline_toBaselineOf="@+id/cancel"
                    app:layout_constraintStart_toStartOf="@+id/password_SignUp2" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="27dp"
                    android:text="@string/cancel"
                    app:layout_constraintStart_toEndOf="@+id/confirm"
                    app:layout_constraintTop_toBottomOf="@+id/password_SignUp2" />

                <ProgressBar
                    android:id="@+id/progressBar_siginup"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>